--- a/style.css
+++ b/style.css
@@ -404,45 +404,67 @@ body {
 }
 
 i {
-  font-size: 40px;
+  font-size: 30px;
   float: right;
-  width: 60px;
+  width: 100px;
   text-align: right;
   background-color: rgb(158, 154, 154);
   color: #fff;
   text-align: center;
-  border-radius: 50px;
+  border-radius: 30px;
   padding: 5px 0;
-  margin-left: 30px;
+  margin-left: 40px;
 }
 
 .tooltip {
-  position: relative;
+  position: absolute;
+  top: 190px;
+  left: 20px;
   display: inline-block;
+  z-index: 10;
 }
 
 .tooltip .tooltiptext {
   visibility: hidden;
-  width: 180px;
+  width: 350px;
+  padding: 3px 5px;
   background-color: rgb(148, 144, 144);
   color: #fff;
   text-align: center;
   border-radius: 6px;
-  padding: 5px;
   position: absolute;
-  z-index: 1;
-  bottom: 125%;
-  left: 50%;
-  transform: translateX(-50%);
+  z-index: 11;
+  top: 100%;
+  left: 0;
+  margin-top: 10px;
   opacity: 0;
   transition: opacity 0.3s;
   text-align: left;
   list-style-position: inside;
+  font-size: 125%;
+  list-style-type: disc;
 }
 
 .tooltip:hover .tooltiptext {
   visibility: visible;
   opacity: 1;
+}
+
+.tooltip .tooltiptext.visible {
+  visibility: visible;
+  opacity: 1;
+}
+
+.tooltip .tooltiptext ul {
+  list-style-position: outside;
+  padding-left: 20px;
+  margin: 5px 0;
+}
+
+.tooltip .tooltiptext li {
+  text-indent: -5px;
+  padding-left: 5px;
+  margin: 2px 0;
 }
 
 .buttons-solitaire-mode {
@@ -451,4 +473,154 @@ i {
   width: 100%;
   margin-top: 20px;
   margin-left: 0; /* Override the default margin-left */
+}
+
+.info-icon {
+  position: relative;
+  left: 40px;
+  cursor: help;
+}
+
+.tooltip-item {
+  display: flex;
+  align-items: flex-start;
+  margin: 2px 0;
+}
+
+.tooltip-item:before {
+  content: "•  ";
+  margin-right: 8px;
+}
+
+.tooltip .tooltiptext li {
+  list-style-type: none;
+}
+
+/* Responsive Styles */
+@media screen and (max-width: 768px) {
+  body {
+    margin-top: 30px;
+  }
+  
+  h1 {
+    font-size: 24px;
+    margin-top: -30px;
+  }
+  
+  .scoreboard {
+    position: relative;
+    top: 0;
+    right: 0;
+    width: auto;
+    max-width: 95%;
+    margin: 0 auto 10px auto;
+  }
+  
+  .score-name {
+    width: 65px;
+  }
+  
+  .score, .cycle-header {
+    width: 35px;
+  }
+  
+  .play {
+    width: 100%;
+    height: 300px;
+    min-height: 300px;
+    padding: 0;
+  }
+  
+  .board, #solitaire-board {
+    width: 300px;
+    height: 300px;
+  }
+  
+  .hand-2, .hand-4 {
+    width: 120px;
+  }
+  
+  .card {
+    width: 60px;
+    height: 90px;
+    font-size: 28px;
+    margin-right: -40px;
+  }
+  
+  .tooltip {
+    position: fixed;
+    bottom: 10px;
+    left: -20px;
+    top: auto;
+  }
+  
+  .tooltip .tooltiptext {
+    width: 280px;
+    font-size: 100%;
+    bottom: 40px;
+    left: 0;
+    top: auto;
+  }
+  
+  .buttons {
+    width: 100%;
+    margin-left: 0;
+    justify-content: center;
+  }
+  
+  .deal, .next {
+    width: 150px;
+    height: 40px;
+    font-size: 20px;
+  }
+  
+  .human {
+    margin-top: 0;
+    margin-bottom: 0;
+    min-height: 80px;
+  }
+  
+  .tophand {
+    margin-top: 0;
+    margin-bottom: 0;
+    min-height: 80px;
+  }
+  
+  /* Reset name button positioning for mobile */
+  button[title="Change your player name"] {
+    bottom: 70px;
+    right: 10px;
+    font-size: 12px;
+    padding: 3px 8px;
+  }
+  
+  /* Add specific selector for the Reset Name button */
+  button[style*="position: fixed"][style*="bottom: 20px"][style*="right: 20px"] {
+    bottom: 60px !important;
+  }
+}
+
+/* For smaller mobile devices */
+@media screen and (max-width: 480px) {
+  .board, #solitaire-board {
+    width: 250px;
+    height: 250px;
+  }
+  
+  .card {
+    width: 50px;
+    height: 75px;
+    font-size: 24px;
+    margin-right: -30px;
+  }
+  
+  .deal, .next {
+    width: 120px;
+    font-size: 18px;
+  }
+  
+  .tooltip .tooltiptext {
+    width: 250px;
+    font-size: 90%;
+  }
 }
